--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
       <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
       <h1>Today I Learned</h1>
     </header>
+
+    <form>
+      <input type="text" placeholder="Share a fact with the world..." />
+      <input type="text" placeholder="Trustworthy source..." />
+      <span>200</span>
+      <select>
+        <option value="">Choose category:</option>
+        <option value="technology">Technology</option>
+        <option value="science">Science</option>
+        <option value="finance">Finance</option>
+      </select>
+      <button>Post</button>
+    </form>
+
     <main>
       <aside>
         <ul>
@@ -19,6 +33,7 @@
           <li><button>Science</button></li>
         </ul>
       </aside>
+
       <section>
         <ul>
           <li>
