11. Adding more Buttons.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
       <h1>Today I Learned</h1>
+      <button>Share a fact</button>
     </header>
 
     <form>
@@ -43,6 +44,13 @@
               <span>#technology#</span>
             </p>
           </li>
+          <li>
+            <div>
+              <button>👍<strong>24</strong></button>
+              <button>🤯<strong>9</strong></button>
+              <button>⛔️<strong>4</strong></button>
+            </div>
+          </li>
 
           <li>
             <p>
@@ -56,6 +64,13 @@
               </a>
               <span>#society#</span>
             </p>
+          </li>
+          <li>
+            <div>
+              <button>👍<strong>15</strong></button>
+              <button>🤯<strong>8</strong></button>
+              <button>⛔️<strong>2</strong></button>
+            </div>
           </li>
         </ul>
       </section>
