--- a/index.html
+++ b/index.html
@@ -46,14 +46,12 @@
 
       <section>
         <ul>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
               <span class="tag">#technology#</span>
             </p>
-          </li>
-          <li>
             <div>
               <button>👍<strong>24</strong></button>
               <button>🤯<strong>9</strong></button>
@@ -61,8 +59,8 @@
             </div>
           </li>
 
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
               changed a diaper. Today, that number is down to 3%
@@ -73,8 +71,6 @@
               </a>
               <span class="tag">#society#</span>
             </p>
-          </li>
-          <li>
             <div>
               <button>👍<strong>15</strong></button>
               <button>🤯<strong>8</strong></button>
