--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <title>Today I Learned!</title>
   </head>
   <body>
-    <header>
-      <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
-      <h1>Today I Learned</h1>
+    <header class="header">
+      <div class="logo">
+        <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
+        <h1>Today I Learned</h1>
+      </div>
       <button>Share a fact</button>
     </header>
 
