--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-              <span class="tag" style="background-color: #3b82f6"
-                >#technology#</span
-              >
             </p>
-            <div>
+            <span class="tag" style="background-color: #3b82f6"
+              >#technology#</span
+            >
+            <div class="vote-buttons">
               <button>👍<strong>24</strong></button>
               <button>🤯<strong>9</strong></button>
               <button>⛔️<strong>4</strong></button>
@@ -73,11 +73,9 @@
                 target="_blank"
                 >(Source)
               </a>
-              <span class="tag" style="background-color: #eab308"
-                >#society#</span
-              >
             </p>
-            <div>
+            <span class="tag" style="background-color: #eab308">#society#</span>
+            <div class="vote-buttons">
               <button>👍<strong>15</strong></button>
               <button>🤯<strong>8</strong></button>
               <button>⛔️<strong>2</strong></button>
