26. Styling the Vote Buttons.

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                 >#technology#</span
               >
               <div class="vote-buttons">
-                <button>👍<strong>24</strong></button>
-                <button>🤯<strong>9</strong></button>
-                <button>⛔️<strong>4</strong></button>
+                <button>👍24</button>
+                <button>🤯9</button>
+                <button>⛔️4</button>
               </div>
             </li>
 
@@ -106,9 +106,9 @@
                 >#society#</span
               >
               <div class="vote-buttons">
-                <button>👍<strong>15</strong></button>
-                <button>🤯<strong>8</strong></button>
-                <button>⛔️<strong>2</strong></button>
+                <button>👍15</button>
+                <button>🤯8</button>
+                <button>⛔️2</button>
               </div>
             </li>
           </ul>
