34. Displaying and Hiding the Form.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           />
           <h1>Today I Learned</h1>
         </div>
-        <button class="btn btn-large">Share a fact</button>
+        <button class="btn btn-large btn-open">Share a fact</button>
       </header>
 
-      <form class="fact-form">
+      <form class="fact-form hidden">
         <input type="text" placeholder="Share a fact with the world..." />
         <input type="text" placeholder="Trustworthy source..." />
         <span>200</span>
@@ -81,7 +81,7 @@
                 >
               </p>
               <span class="tag" style="background-color: #3b82f6"
-                >#technology#</span
+                >technology</span
               >
               <div class="vote-buttons">
                 <button>👍24</button>
@@ -102,9 +102,7 @@
                   >(Source)
                 </a>
               </p>
-              <span class="tag" style="background-color: #eab308"
-                >#society#</span
-              >
+              <span class="tag" style="background-color: #eab308">society</span>
               <div class="vote-buttons">
                 <button>👍15</button>
                 <button>🤯8</button>
@@ -115,5 +113,6 @@
         </section>
       </main>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
